🚸 Avoid layout flicker due to Font Awesome icons asynchronous loading
Why:
- When using the SVG+JS method, the icons will be missing during the
  first contentful paint, creating layout flicker. The recommended
  approach is to hide the page body with CSS until Font Awesome has
  finished loading the icons.
    https://docs.fontawesome.com/web/dig-deeper/svg-async
- The style cannot be set directly on body, but we need .wait-for-icons,
  or else it will affect also the SPA site. When using Font Awesome's
  React integration, it will not set the .fontawesome-i2svg-active and
  related classes.
- A long-term solution would be to use bare SVG and avoid the JavaScript
  dependency. See https://docs.fontawesome.com/web/add-icons/svg-bare

--- a/web/src/layout/Layout.module.css
+++ b/web/src/layout/Layout.module.css
@@ -110,6 +110,18 @@ h1 {
     margin-top: 0;
 }
 
+
+/* XXX: avoid layout flicker due to Font Awesome icons rendering asynchronously: https://docs.fontawesome.com/web/dig-deeper/svg-async */
+/* TODO: switch to using bare SVG, without JS: https://docs.fontawesome.com/web/add-icons/svg-bare */
+.wait-for-icons {
+    display: none;
+}
+
+:global(.fontawesome-i2svg-active) .wait-for-icons {
+    display: initial;
+}
+
+
 @media screen and (min-width: 768px) {
     .navbar {
         display: flex;
